working on test run for 6-0stable-with-odbc

--- a/test/config.yml
+++ b/test/config.yml
@@ -36,5 +36,5 @@ connections:
     arunit2:
       <<: *default_connection_info
       database: activerecord_unittest2
-      dsn: <%= ENV['ACTIVERECORD_UNITTEST2_DSN'] || 'activerecord_unittest2' %>
+      dsn: <%= ENV['ACTIVERECORD_UNITTEST2_DSN'] || 'activerecord_unittest' %>
 
